Added draw and popup functions

--- a/index.html
+++ b/index.html
@@ -36,6 +36,29 @@
                   </div>
             </div>
       </game>
+      <popup>
+            <div id="draw-popup" class="popup">
+                  <div class="popup-content">
+                        <div class="close-button">&times;</div>
+                        <h2>This game is a draw</h2>
+                  <div class="reset-new-button">
+                        <button class="reset-button">Reset</button>
+                        <button class="new-game-button">New Game</button>
+                  </div>
+                  </div>
+            </div>
+            <div id="win-popup" class="popup">
+                  <div class="popup-content">
+                        <div class="close-button">&times;</div>
+                        <h2>Congratulations! <span class="winner"></span></h2>
+                        <p></span>You won the game!</p>
+                  <div class="reset-new-button">
+                        <button class="reset-button">Reset</button>
+                        <button class="new-game-button">New Game</button>
+                  </div>
+                  </div>
+            </div>
+      </popup>
 </body>
 <script src="app.js"></script>
 </html>
